--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
-    <%= yield %>
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
